RESOLVED FIXED171962
Computing optionalDefArgWidth in CheckSpecial should not consider Scratch roles
https://bugs.webkit.org/show_bug.cgi?id=171962
Summary Computing optionalDefArgWidth in CheckSpecial should not consider Scratch roles
Saam Barati
Reported 2017-05-10 19:53:42 PDT
I think we should be using isLateDef and not isAnyDef.
Attachments
patch (4.78 KB, patch)
2017-05-11 12:56 PDT, Saam Barati
no flags
Filip Pizlo
Comment 1 2017-05-11 12:05:01 PDT
(In reply to Saam Barati from comment #0) > I think we should be using isLateDef and not isAnyDef. I think it should be "Arg::isAnyDef(role) && role != Arg::Scratch". The def that this code is looking for could be early or late. The thing you're trying to ignore are Scratches, which aren't really defs for the purpose of this code.
Saam Barati
Comment 2 2017-05-11 12:56:34 PDT
WebKit Commit Bot
Comment 3 2017-05-11 15:11:22 PDT
Comment on attachment 309756 [details] patch Rejecting attachment 309756 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 309756, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ingContext should implement WebGLRenderingContextBase The copy of the patch that failed is found in: /Volumes/Data/EWS/WebKit/.git/rebase-apply/patch When you have resolved this problem, run "git rebase --continue". If you prefer to skip this patch, run "git rebase --skip" instead. To check out the original branch and stop rebasing, run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at /Volumes/Data/EWS/WebKit/Tools/Scripts/webkitdirs.pm line 2719. Full output: http://webkit-queues.webkit.org/results/3721150
WebKit Commit Bot
Comment 4 2017-05-11 23:05:57 PDT
Comment on attachment 309756 [details] patch Clearing flags on attachment: 309756 Committed r216734: <http://trac.webkit.org/changeset/216734>
WebKit Commit Bot
Comment 5 2017-05-11 23:05:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.