Computing optionalDefArgWidth in CheckSpecial should not consider Scratch roles https://bugs.webkit.org/show_bug.cgi?id=171962

Reviewed by Filip Pizlo.

The purpose of getting the result width is to get the width of
the result of the arithmetic. It does not care about that the
Check happens to define scratches.

* b3/B3CheckSpecial.cpp:
(JSC::B3::CheckSpecial::forEachArg):
* b3/testb3.cpp:
(JSC::B3::testCheckMul):
(JSC::B3::testCheckMulMemory):
(JSC::B3::testCheckMul64):
(JSC::B3::testCheckMulFold):
(JSC::B3::testCheckMulFoldFail):
(JSC::B3::testCheckMulArgumentAliasing64):
(JSC::B3::testCheckMulArgumentAliasing32):
(JSC::B3::testCheckMul64SShr):


Canonical link: https://commits.webkit.org/188952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216734 268f45cc-cd09-0410-ab3c-d52691b4dbfc